Fixed issue with drop down menu hidden behind other items

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,18 +130,6 @@ body {
     z-index: 1;
 }
 
-.item.muuri-item-dragging {
-    z-index: 3;
-}
-
-.item.muuri-item-releasing {
-    z-index: 2;
-}
-
-.item.muuri-item-hidden {
-    z-index: 0;
-}
-
 .item-content {
     position: relative;
     width: 100%;
